Implement getReservation, confirm appointment, cancel appointment
