# internal/appointments/ports/http/confirm_appointment_handler.go
@@ -4,10 +4,7 @@ import (
 	"context"
 	"strings"
 
-	openapi_types "github.com/oapi-codegen/runtime/types"
-
 	"scheduler/internal/appointments/app"
-	"scheduler/internal/appointments/domain"
 	"scheduler/internal/common"
 )
 
@@ -18,17 +15,14 @@ func (h Handlers) ConfirmAppointment(ctx context.Context, request ConfirmAppoint
 	}
 
 	appointmentUUID, err := h.service.ConfirmAppointment(ctx, app.ConfirmAppointment{
-		UserID: userID,
-		ReservationUUID: domain.ReservationUUID{
-			UUID: common.UUID(request.ReservationUuid),
-		},
+		UserID:          userID,
+		ReservationUUID: request.ReservationUuid,
 	})
 	if err != nil {
 		return nil, err
 	}
 
 	return ConfirmAppointment200JSONResponse{
-		AppointmentUuid: openapi_types.UUID(appointmentUUID.UUID),
-		Status:          Confirmed,
+		AppointmentUuid: appointmentUUID,
 	}, nil
 }
