# internal/appointments/ports/http/handlers.go
@@ -1,21 +1,34 @@
 package http
 
 import (
+	"context"
+
 	"scheduler/internal/appointments/app"
+	"scheduler/internal/appointments/domain"
 	"scheduler/internal/common"
 )
 
-type Handlers struct {
-	service *app.Service
+type ReservationReadModel interface {
+	GetReservationByID(ctx context.Context, userID string, reservationUUID domain.ReservationUUID) (GetReservationResponse, error)
 }
 
-func NewHandlers(service *app.Service) Handlers {
+type Handlers struct {
+	service              *app.Service
+	reservationReadModel ReservationReadModel
+}
+
+func NewHandlers(service *app.Service, reservationReadModel ReservationReadModel) Handlers {
 	if service == nil {
 		panic("service can't be nil")
 	}
 
+	if reservationReadModel == nil {
+		panic("reservationReadModel can't be nil")
+	}
+
 	return Handlers{
-		service: service,
+		service:              service,
+		reservationReadModel: reservationReadModel,
 	}
 }
 
